[package]
name = "forward_cli"
version = "0.1.0"
authors = ["EqualMa <equalma@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2"
forward = { path = "../../lib/forward" }

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
