[package]
name = "forward"
version = "0.1.0"
authors = ["EqualMa <equalma@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
byteorder = "1.3.2"
futures = "0.3.1"
